Name:                hgit2
Version:             0.1
Synopsis:            Bindings for libgit2
Description:         Low level bindings for libgit2.
Homepage:            https://github.com/norm2782/hgit2
License:             BSD3
License-File:        LICENSE
Author:              Jurriën Stutterheim
Maintainer:          j.stutterheim@me.com
Category:            Data

Build-Type:          Simple
Cabal-Version:       >= 1.8.0.4

Extra-Source-Files:
  src/include/git2/blob.h
  src/include/git2/branch.h
  src/include/git2/commit.h
  src/include/git2/common.h
  src/include/git2/config.h
  src/include/git2/errors.h
  src/include/git2/index.h
  src/include/git2/net.h
  src/include/git2/object.h
  src/include/git2/odb.h
  src/include/git2/odb_backend.h
  src/include/git2/oid.h
  src/include/git2/reflog.h
  src/include/git2/refs.h
  src/include/git2/refspec.h
  src/include/git2/remote.h
  src/include/git2/repository.h
  src/include/git2/revwalk.h
  src/include/git2/signature.h
  src/include/git2/status.h
  src/include/git2/tag.h
  src/include/git2/thread-utils.h
  src/include/git2/transport.h
  src/include/git2/tree.h
  src/include/git2/types.h
  src/include/git2/zlib.h
  src/include/git2.h

Source-Repository head
  type:     git
  location: https://github.com/norm2782/hgit2.git

Executable hgit2
  HS-Source-Dirs:      src/haskell
  Main-Is:             Main.hs
  Build-Depends:       base >= 4 && < 5, hgit2

Library
  HS-Source-Dirs:      src/haskell
  Exposed-Modules:     Data.HGit2.Blob, Data.HGit2.Commit, Data.HGit2.Config,
                       Data.HGit2.Errors, Data.HGit2.Git2, Data.HGit2.Index,
                       Data.HGit2.Object, Data.HGit2.Repository,
                       Data.HGit2.OID, Data.HGit2.Tree, Data.HGit2.Signature,
                       Data.HGit2.Types, Data.HGit2.ODB, Data.HGit2.Status,
                       Data.HGit2.ODBBackend
  Build-Tools:         c2hs
  CC-Options:          -U__BLOCKS__
  GHC-Options:         -Wall -fwarn-tabs
  Include-Dirs:        src/include
  Build-Depends:       base >= 4 && < 5
  Extra-Libraries:     git2
